--- a/paint/html/index.html
+++ b/paint/html/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="content">
         <div class="menu_bar">
+            <div class="buttons_un_re">
+                <div class="button_block">
+                    <button class="undo_redo" onclick="cUndo()"><img src="../resources/arrow-left-circle_disabled.png" alt="undo"></button>
+                    <button class="undo_redo" onclick="cRedo()"><img src="../resources/arrow-right-circle_disabled.png" alt="redo"></button>
+                </div>
+                <span class="helpfull_text">Undo | Redo</span>
+            </div>
             <select name="size" id="size" class="size">
                 <option value="1" selected>1px</option>
                 <option value="3">3px</option>
@@ -21,9 +28,9 @@
                     <button class="tool" onclick="filling()"></button>
                     <button class="tool" onclick=""></button>
                     <button class="tool" onclick=""></button>
-                    <button class="tool" onclick=""></button>
-                    <button class="tool" onclick=""></button>
-                    <button class="tool" onclick=""></button>
+                    <button class="tool" onclick="check_scale_active()"></button>
+                    <button class="tool" onclick="rotate_hor()"><img src="../resources/horizont.png" alt=""></button>
+                    <button class="tool" onclick="rotate_vert()"><img src="../resources/verticalpng.png" alt=""></button>
                 </div>
                 <span class="helpfull_text">Tools</span>
             </div>
@@ -54,10 +61,14 @@
             </div>
             <div class="clear_field" onclick="clearField()">Clear</div>
         </div>
-        <div class="field" id="page">
+        <div class="field demo" id="page">
             <canvas id="field"></canvas>
         </div>
     </div>
+    <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.loupe.js"></script>
+	<script type="text/javascript">$('.demo').loupe();</script> -->
+
     <script src="../js/script.js"></script>
 </body>
 </html>
